# document-triage-api

./: README.md  main.py  pyproject.toml  requirements.txt
app/: api.py  classifier.py  main.py  models.py  schemas.py  settings.py
data/: labels.json
tests/: test_classifier.py
