[project]
name = "document-triage-api"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
document-triage-api = { workspace = true }

[dependency-groups]
dev = [
    "document-triage-api",
]
